plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.15.0'
}

group 'org.intellij.sdk'
version '3.2.0'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

compileJava {
    options.encoding = 'UTF-8'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    implementation 'de.plushnikov.lombok-intellij-plugin:intellij-facade-factory:0.5'
    implementation "io.swagger.core.v3:swagger-models:2.2.22"
}

intellij {
    version = '2024.1.1'
    plugins = ['com.intellij.java']
}

buildSearchableOptions {
    enabled = false
}

patchPluginXml {
    version = project.version
    sinceBuild = '222.5'
    untilBuild = '241.*'
}


runIde {
    jvmArgs '-Xmx4G'
    jvmArgs '-Xss10M'
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

publishPlugin {
    token = System.getenv("ENV.JETBRAINS.TOKEN")
}

publishPlugin {
    channels = ['stable']
}